# erlang-libdecaf

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  build.config  erlang.mk  rebar.config
.github/workflows/: main.yml
c_deps/ed448goldilocks/: .gitignore  CMakeLists.txt  Doxyfile.in  HISTORY.txt  README.md  TODO.txt
c_deps/ed448goldilocks/cmake/: DecafConfig.cmake.in
c_deps/ed448goldilocks/src/: CMakeLists.txt  sha512.c  shake.c  spongerng.c
c_deps/ed448goldilocks/src/curve25519/: CMakeLists.txt
c_deps/ed448goldilocks/src/ed448goldilocks/: CMakeLists.txt
c_deps/ed448goldilocks/src/generator/: CMakeLists.txt  curve_data.py  template.py
c_deps/ed448goldilocks/src/generator/curve25519/: CMakeLists.txt
c_deps/ed448goldilocks/src/generator/ed448goldilocks/: CMakeLists.txt
c_deps/ed448goldilocks/src/include/: keccak_internal.h  portable_endian.h  word.h
c_deps/ed448goldilocks/src/include/arch_32/: arch_intrinsics.h
c_deps/ed448goldilocks/src/include/arch_arm_32/: arch_intrinsics.h
c_deps/ed448goldilocks/src/p25519/: CMakeLists.txt
c_deps/ed448goldilocks/src/p25519/arch_32/: f_impl.c
c_deps/ed448goldilocks/src/p448/: CMakeLists.txt
c_deps/ed448goldilocks/src/p448/arch_32/: f_impl.c
c_deps/ed448goldilocks/src/p448/arch_x86_64/: f_impl.c
c_deps/ed448goldilocks/src/per_curve/: decaf.tmpl.c  decaf_gen_tables.tmpl.c  eddsa.tmpl.c  eddsa.tmpl.h  eddsa.tmpl.hxx  elligator.tmpl.c  point.tmpl.h  point.tmpl.hxx  scalar.tmpl.c
c_deps/ed448goldilocks/src/per_field/: f_field.tmpl.h  f_generic.tmpl.c
c_deps/ed448goldilocks/src/public_include/decaf/: common.h  secure_buffer.hxx  sha512.h  shake.h  shake.hxx  spongerng.h
c_deps/ed448goldilocks/test/: CMakeLists.txt  bench_decaf.cxx  shakesum.c  test_decaf.cxx  test_decaf.sage  vectors.inc.cxx
c_src/: Makefile  decaf_255_funcs.h  decaf_448_funcs.h  ed255_funcs.h  ed448_api.c  ed448_api.h  ed448_api_goldilocks.c  ed448_api_goldilocks.h  ed448_drv.c  ed448_drv.h  ed448_drv_common.h  ed448_funcs.h  ed448_port.c  ed448_port.h  ed448_request.c  ed448_request.h  eddsa_255_funcs.h  eddsa_448_funcs.h  env.mk  libdecaf_nif.c  libdecaf_nif.h  point_255_funcs.h  point_448_funcs.h  sha512_funcs.h  shake_funcs.h
c_src/nif/: csprng.c  csprng.h  ed25519.c  ed25519.h  ed448.c  ed448.h  hash.c  hash.h  libdecaf_nif.c  libdecaf_nif.h  xnif_env.h  xnif_slice.c  xnif_slice.h  xnif_trace.h  xof.c  xof.h
c_src/nif/impl/: ed255.c.h  ed448.c.h  point_255.c.h  point_448.c.h  sha3.c.h  sha512.c.h  shake.c.h  spongerng.c.h
include/: ed448.hrl
priv/: Dockerfile
src/: ed448.app.src  ed448.erl  ed448_app.erl  ed448_goldilocks.erl  ed448_server.erl  ed448_sup.erl  libdecaf.app.src  libdecaf.erl  libdecaf_curve25519.erl  libdecaf_curve448.erl  libdecaf_keccak.erl  libdecaf_keccak_sha3.erl  libdecaf_nif.erl  libdecaf_sha2.erl  libdecaf_sha3.erl  libdecaf_shake.erl  libdecaf_spongerng.erl
test/: cfrg_SUITE.erl  fetch.erl  fips180_4_SUITE.erl  fips202_SUITE.erl  fips_testvector.erl  hex.erl  legacy_keccak_SUITE.erl  libdecaf_ct.erl  spongerng_SUITE.erl  timeslice_SUITE.erl
